--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -2,3 +2,5 @@ align = none
 assumeStandardLibraryStripMargin = true
 danglingParentheses = true
 binPack.literalsExclude = []
+docstrings = javadoc
+project.git = true
