--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,16 @@
 language: scala
 script:
-- bash -c $CI_TEST
+- bash -c "$CI_TEST"
 jdk:
 - oraclejdk8
 
 env:
   matrix:
-    - CI_TEST: sbt unit/test
-    - CI_TEST: sbt slow/test
+    - CI_TEST: sbt "unit/test"
+
+    - CI_TEST: sbt ";clean;coverage;slow/test;coverageReport"
+      CI_COVERAGE: true
+
     - CI_TEST: ./scalafmt --test
 
 cache:
@@ -24,3 +27,6 @@ before_cache:
 - find $HOME/.sbt -name "*.lock" -type f -delete
 - find $HOME/.ivy2/cache -name "ivydata-*.properties" -type f -delete
 - rm -rf $HOME/.ivy2/local
+
+after_success:
+  - bash "[[ -v CI_COVERAGE ]] && bash <(curl -s https://codecov.io/bash)"
