Add build for paige subproject

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -4,3 +4,6 @@ danglingParentheses = true
 binPack.literalsExclude = []
 docstrings = javadoc
 project.git = true
+project.excludeFilters = [
+  paiges
+]
