Comments (89.01%): Add support for , and { } in block

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@ PlaygroundSuite.scala
 repos.tar.gz*
 .coursier
 .scalafmt*
+output/input.scala
+output/obtained.scala
+tests/slow/todo-comments.diff
+tests/slow/todo-idempotent-ast.diff
+tests/unit/src/test/resources/playground.scala
